# gscream

./: APPTESTREADME.md  Makefile  README  README.md  config.status  gscream_app_rx  gscream_app_rx.cpp  gscream_app_tx  gscream_app_tx.cpp  libtool  log  log2  parecv.cpp  pasend  pasend.cpp  recv.cpp  send  send.cpp  tim är gud
autom4te.cache/: output.1  requests  traces.1
gst-gscreamrx/gst-plugin/: Makefile
gst-gscreamrx/gst-plugin/src/: Makefile  Makefile.am  gstgscreamrx.h
gst-gscreamrx/gst-plugin/src/.deps/: libgstgscreamrx_la-gstgscreamrx.Plo
gst-gscreamrx/gst-plugin/src/.libs/: libgstgscreamrx.la  libgstgscreamrx.ver
gst-gscreamtx/gst-plugin/: Makefile  configure.ac
gst-gscreamtx/gst-plugin/src/: Makefile  Makefile.am  ScreamTx.cpp  ScreamTx.h  TestFile.cpp  TestFile.h  gstgscreamtx.c  gstgscreamtx.cpp  gstgscreamtx.h  libgstgscreamtx.la  libgstgscreamtx_la-ScreamTx.lo  libgstgscreamtx_la-gstgscreamtx.lo
old/: ChangeLog  Makefile  README.md  configure  recv  recv.cpp  send.cpp
old/autom4te.cache/: output.0  traces.0
old/src/: gstscream.h
old/src/.deps/: libgstscream_la-gstscream.Plo
old/src/.libs/: libgstscream.lai  libgstscream.ver
oldz/gst-plugin/src/: gstgscreamrx.c  libgstgscreamrx.la  libgstgscreamrx_la-gstgscreamrx.lo
oldz/old/src/.libs/: libgstscream.la
ownscript/: INSTALL  setPluginEnv.sh
src/: Makefile  Makefile.am  Makefile.in  gstmyfilter_backup.c  gstplugin.c  gstscream.c  gstscream.h  libgstscream.la  libgstscream_la-gstscream.lo
src/.libs/: libgstmyfilter.exp  libgstmyfilter.ver  libgstscream.exp  libgstscream.ver
(+11 files in other folders)
